--- a/src/main/resources/templates/laptops.html
+++ b/src/main/resources/templates/laptops.html
@@ -29,7 +29,7 @@
             </tr>
         </tbody>
     </table>
-
+    <a href="/laptops/add" class="btn btn-primary mb-3">Thêm Laptop</a>
 
 </body>
 
